# socket_communication

./: CMakeLists.txt  README.md  main.cpp
client/: CMakeLists.txt  client.cpp  client.h
server/: CMakeLists.txt  server.cpp  server.h
